--- a/NepaliDateConverter/res/layout-land/adtobs.xml
+++ b/NepaliDateConverter/res/layout-land/adtobs.xml
@@ -1,105 +1,92 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
-    tools:context="er.sanam.date_converter.AD" >
+    android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textYear"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="42dp"
-        android:weightSum="3" >
+        android:layout_marginTop="20dip"
+        android:padding="20dip"
+        android:text="Year" />
 
-        <TextView
-            android:id="@+id/yearView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="25dp"
-            android:text="Year"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/monthView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="11dp"
-            android:text="Month"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/dayView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="24dp"
-            android:text="Day"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/monthView"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_marginLeft="13dp"
-        android:layout_marginRight="13dp"
-        android:layout_marginTop="24dp" >
+        android:layout_marginTop="20dip"
+        android:layout_toRightOf="@id/textYear"
+        android:padding="20dip"
+        android:text="Month" />
 
-        <Spinner
-            android:id="@+id/adToBsSp1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Spinner
-            android:id="@+id/adToBsSp2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:entries="@array/nepmonth" />
-
-        <Spinner
-            android:id="@+id/adToBsSp3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/dayView"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/monthView"
+        android:layout_alignBottom="@+id/monthView"
+        android:layout_toRightOf="@+id/monthView"
+        android:padding="20dip"
+        android:text="Day" />
 
     <Button
         android:id="@+id/convertA"
-        android:layout_width="200dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
+        android:layout_below="@+id/textYear"
+        android:layout_marginTop="85dp"
+        android:layout_toLeftOf="@+id/dayView"
         android:background="@color/ColorPrimaryDark"
         android:text="AD देखि बिक्रम संवत "
         android:textColor="#FFFFFF" />
+
 
     <TextView
         android:id="@+id/textV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center|top"
-        android:text="Test Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:paddingTop="30dp"
+        android:layout_above="@+id/adToBsSp3"
+        android:layout_alignRight="@+id/nepView"
         android:textColor="#ff07c6ff"
-        android:textStyle="bold"
-        android:typeface="sans"
-        android:layout_below="@+id/convertA"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/nepView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/dayView"
+        android:layout_marginRight="46dp"
+        android:textColor="#ff07c6ff"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/adToBsSp3"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dayView"
+        android:layout_toRightOf="@+id/monthView"
+        android:layout_marginRight="9dp"
+        android:layout_weight="3"
+        android:entries="@array/engdays" />
+
+    <Spinner
+        android:id="@+id/adToBsSp2"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/monthView"
+        android:layout_toRightOf="@+id/textYear"
+        android:layout_weight="2"
+        android:entries="@array/engmonth" />
+
+    <Spinner
+        android:id="@+id/adToBsSp1"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/textYear"
+        android:layout_weight="1"
+        android:entries="@array/engyear" />
 
 </RelativeLayout>
