--- a/NepaliDateConverter/res/layout/adtobs.xml
+++ b/NepaliDateConverter/res/layout/adtobs.xml
@@ -85,33 +85,31 @@
         android:textColor="#FFFFFF" />
 
     <TextView
-        android:id="@+id/textV"
+        android:id="@+id/nepView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/nepView"
+        android:layout_alignLeft="@+id/textV"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/nepView"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="142dp"
         android:gravity="center"
+        android:text="Text 2"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ff07c6ff"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/nepView"
+        android:id="@+id/textV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/linearLayout1"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/convertA"
-        android:layout_marginTop="86dp"
+        android:layout_alignTop="@+id/nepView"
+        android:layout_marginTop="63dp"
         android:gravity="center"
+        android:text="Text 1"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ff07c6ff"
         android:textStyle="bold" />
